# chatbot

./: .gitignore  Makefile  alembic.ini  pyproject.toml
chatbot/: settings.py  workers.py
chatbot/application/protocols/: application_repository.py  biometric_validation_provider.py  consent_repository.py  load_application_document_repository.py  originator_repository.py  payment_gateway.py  save_biometric_validation_repository.py  save_caller_repository.py  save_company_repository.py  save_contact_repository.py  save_originator_seller_repository.py  save_payment_repository.py  starkbank_pix_gateway.py  usecase.py
chatbot/application/services/: usecase_registry.py
chatbot/application/usecases/: load_caller.py  (+13 more)
chatbot/domain/: protocols.py
tests/acceptance/: test_acceptance.py
tests/integration/: conftest.py  test_application_contact_model.py  test_application_register_originator_seller_step.py  test_application_registry_with_biometric_step.py  test_application_registry_with_caller_step.py  test_application_registry_with_cnpj_step.py  test_application_registry_with_contact_step.py  test_application_registry_with_name_step.py  test_application_registry_with_payment_step.py  test_pix_charge_model.py
tests/unit/: test_application_contact_entity.py  test_application_document_entity.py  test_application_entity.py  test_biometric_validation_entity.py  test_biometric_validation_model.py  test_cnpj_national_id.py  test_consent_entity.py  test_cpf_national_id.py  test_originator_seller_entity.py  test_payment_entity.py  test_payment_step.py  test_terms_consent_model.py
(+65 files in other folders)
